<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="#F3F3F3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/bs_header"
        android:textColor="#000"
        android:textSize="17sp"
        android:padding="@dimen/padding_medium"/>

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/padding_medium"
        app:srcCompat="@drawable/ic_close_black_24dp"/>

    <uk.abdoul.co.fitit.search.DelayAutoCompleteTextView
        android:id="@+id/search_editext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/colorInputLine"
        android:ellipsize="end"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="@dimen/margin_medium"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"/>

    <ImageView
        android:id="@+id/go_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_medium"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        app:srcCompat="@drawable/ic_check_black_24dp"/>

    <Button
        android:id="@+id/btn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="@dimen/margin_medium"
        android:text="@string/show_results"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_editext"/>

</android.support.constraint.ConstraintLayout>